Move reference from table to description
... Somehow, this meant reworking the whole layout

--- a/src/features/heritage/Context.module.less
+++ b/src/features/heritage/Context.module.less
@@ -1,7 +1,7 @@
 @import (reference) "../../common.less";
 
 .container {
-  max-width: @screen-xs;
+  max-width: @screen-sm;
 
   &.expanded {
     max-width: @screen-lg;
