--- a/src/features/heritage/Form.module.less
+++ b/src/features/heritage/Form.module.less
@@ -1,5 +1,7 @@
+@import (reference) "~antd/dist/antd.less";
+
 .form {
-  max-width: 576px;
+  max-width: @screen-md !important;
   margin: 0 auto;
   padding: 24px;
   padding-top: 0;
