--- a/src/features/heritage/Layout.module.less
+++ b/src/features/heritage/Layout.module.less
@@ -16,7 +16,7 @@
   }
 
   & > * {
-    max-width: @screen-md;
+    max-width: @screen-lg;
     margin: 0 auto;
     margin-bottom: 24px;
     padding: 0 12px;
