--- a/src/features/heritage/Summary.module.less
+++ b/src/features/heritage/Summary.module.less
@@ -1,4 +1,4 @@
-@import (reference) "../../common.less";
+@import (reference) "common.less";
 
 @label-background-color: #f0efed;
 
@@ -53,8 +53,4 @@
   :global(.ant-descriptions-view) tbody > tr:last-child {
     border-bottom: 4px double @border-green;
   }
-}
-
-.justify {
-  text-align: justify;
 }
