Use dedicated craco plugin for simpler config
And supposedly better build

--- a/src/common.less
+++ b/src/common.less
@@ -8,7 +8,7 @@
 @addkept-die-color: #b37feb;
 @reroll-die-color: #87e8de;
 
-@default-background-color: @collapse-content-bg;
+@default-background-color: #efefe7;
 
 .block-title {
   color: @text-green;
