--- a/src/features/roller/Intent.module.less
+++ b/src/features/roller/Intent.module.less
@@ -1,4 +1,4 @@
-@import (reference) "../../common.less";
+@import (reference) "common.less";
 
 .form {
   margin: 0 auto;
@@ -84,6 +84,11 @@
     padding: 24px;
     padding-bottom: 12;
     margin-bottom: 24px;
+  }
+
+  .help-message {
+    color: #722ed1;
+    margin-bottom: 32px;
   }
 }
 
