Add (doing nothing) advanced button

--- a/src/features/roller/Intent.module.less
+++ b/src/features/roller/Intent.module.less
@@ -104,6 +104,13 @@
     padding-bottom: 12;
     margin-bottom: 24px;
   }
+
+  .advanced-button {
+    button {
+      display: block;
+      margin: 0 auto;
+    }
+  }
 }
 
 .plus :global(.ant-form-item-control-input-content):after {
