No more collpase for important information

--- a/src/features/roller/Intent.module.less
+++ b/src/features/roller/Intent.module.less
@@ -111,6 +111,12 @@
       margin: 0 auto;
     }
   }
+
+  .advanced-explanation {
+    ul {
+      margin-bottom: 0;
+    }
+  }
 }
 
 .plus :global(.ant-form-item-control-input-content):after {
