--- a/src/features/roller/glitter/ExplainOptions.module.less
+++ b/src/features/roller/glitter/ExplainOptions.module.less
@@ -1,19 +1,22 @@
+@import (reference) "common.less";
+
 .container {
-  &
-    > :global(.ant-collapse-item.ant-collapse-no-arrow)
-    > :global(.ant-collapse-header) {
-    color: dodgerblue;
-    text-decoration: underline dashed;
-    text-underline-offset: 4px;
-    padding-top: 0;
-    padding-left: 0;
-    margin-top: -12px;
+  background-color: white;
+  border: 1px solid fade(black, 25%);
+  padding: 12px;
+  margin-bottom: 24px;
+
+  & > *:last-child {
+    margin-bottom: 0;
   }
 
-  &
-    > :global(.ant-collapse-item)
-    > :global(.ant-collapse-content)
-    > :global(.ant-collapse-content-box) {
-    padding-top: 0;
+  dl {
+    dt:before {
+      content: "💮 ";
+    }
+
+    dd:last-of-type {
+      margin-bottom: 0;
+    }
   }
 }
