Fix background blinking on scroll bar apparition

--- a/src/features/roller/index.module.less
+++ b/src/features/roller/index.module.less
@@ -21,6 +21,7 @@
   padding-left: 8px;
   padding-right: 8px;
   padding-bottom: 32px;
+  min-height: calc(~"100vh - 64px");
 
   @media (min-width: @screen-md) {
     padding-left: 24px;
