--- a/src/features/heritage/Form.module.less
+++ b/src/features/heritage/Form.module.less
@@ -1,22 +1,25 @@
-@import (reference) "~antd/dist/antd.less";
+@import (reference) "common.less";
 
 .form {
-  max-width: @screen-md !important;
+  .torii-box();
+  max-width: @screen-md;
   margin: 0 auto;
-  padding: 24px;
-  padding-top: 0;
 }
 
-.footer :global(.ant-form-item-control-input-content) {
-  display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
-}
+.footer {
+  margin-bottom: 0;
 
-.footer :global(.ant-form-item-control-input-content) > * {
-  margin-right: 24px;
-}
+  :global(.ant-form-item-control-input-content) {
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+  }
 
-.footer :global(.ant-form-item-control-input-content) > *:last-child {
-  margin-right: 0;
+  :global(.ant-form-item-control-input-content) > * {
+    margin-right: 24px;
+  }
+
+  :global(.ant-form-item-control-input-content) > *:last-child {
+    margin-right: 0;
+  }
 }
