Hide all these options as a default

--- a/src/features/roller/Keep.module.less
+++ b/src/features/roller/Keep.module.less
@@ -39,3 +39,11 @@
 .addkept-die {
   background-color: @addkept-die-color;
 }
+
+.else-button {
+  float: left;
+}
+
+.main-buttons {
+  margin-bottom: 24px;
+}
