--- a/src/features/roller/reroll/Alter.module.less
+++ b/src/features/roller/reroll/Alter.module.less
@@ -1,8 +1,3 @@
-.list > div {
-  margin-bottom: 18px;
-  display: block;
-}
-
 .buttons {
   display: flex;
   justify-content: right;
@@ -13,5 +8,22 @@
     &:last-child {
       margin-right: 0;
     }
+  }
+}
+
+.arrow {
+  text-align: center;
+  font-size: 48px;
+  margin-top: -24px;
+}
+
+.altered-dice {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+
+  & > * {
+    margin: 0 6px;
+    margin-bottom: 16px;
   }
 }
