Change Ishiken to new format
Still unsure this is good
But at least it's better than the previous one

--- a/src/features/roller/reroll/Ishiken.module.less
+++ b/src/features/roller/reroll/Ishiken.module.less
@@ -8,15 +8,21 @@
   h3 {
     text-align: center;
   }
+}
 
-  .alterators {
-    & > span {
-      display: block;
-      margin-bottom: 12px;
-    }
+.arrow {
+  text-align: center;
+  font-size: 48px;
+  margin-top: -24px;
+}
 
-    & > div {
-      margin-bottom: 16px;
-    }
+.altered-dice {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+
+  & > * {
+    margin: 0 6px;
+    margin-bottom: 16px;
   }
 }
