School with extra kept dice
Don't show twice the dice

--- a/src/features/roller/Intent.module.less
+++ b/src/features/roller/Intent.module.less
@@ -55,6 +55,14 @@
       display: block;
       margin: 0 auto;
     }
+
+    :global(.ant-row) {
+      margin-bottom: 24px;
+    }
+
+    & > :global(.ant-row) {
+      margin-bottom: 0;
+    }
   }
 
   .assist-container {
