Add (emphasis-style) rerolls

--- a/src/features/d10/D10Roller.module.less
+++ b/src/features/d10/D10Roller.module.less
@@ -35,6 +35,11 @@
       &:last-child {
         margin-right: 0;
       }
+
+      &.reroll-arrow {
+        margin-left: -12px;
+        margin-right: 0px;
+      }
     }
   }
 
