Boilerplate for logged d10 roll
So. Much. Copy-paste.

--- a/src/features/d10/D10Roller.module.less
+++ b/src/features/d10/D10Roller.module.less
@@ -21,6 +21,13 @@
   }
 }
 
+.fix-user-switch {
+  :global(.ant-form-item):first-child {
+    margin-bottom: 12px;
+    align-items: center;
+  }
+}
+
 .result {
   .torii-box();
   margin: 24px auto;
