Add expected action buttons

--- a/src/features/d10/D10IdentifiedRoll.module.less
+++ b/src/features/d10/D10IdentifiedRoll.module.less
@@ -18,4 +18,12 @@
 .buttons {
   display: flex;
   justify-content: flex-end;
+
+  & > * {
+    margin-right: 24px;
+
+    &:last-child {
+      margin-right: 0;
+    }
+  }
 }
