--- a/src/features/d10/D10Roller.module.less
+++ b/src/features/d10/D10Roller.module.less
@@ -39,3 +39,16 @@
   text-align: center;
   max-width: @screen-md;
 }
+
+.buttons {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 24px;
+
+  & > * {
+    margin-right: 24px;
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+}
