--- a/src/features/d10/D10Roller.module.less
+++ b/src/features/d10/D10Roller.module.less
@@ -3,11 +3,12 @@
 .background {
   .paper-background();
   flex: 1;
+  padding-bottom: 24px;
 }
 
 .form {
   .torii-box();
-  margin: 24px auto;
+  margin: 0 auto 24px;
   max-width: @screen-md;
 
   @media (min-width: @screen-md) {
