Add direct link to roll

--- a/src/features/d10/FormResult.module.less
+++ b/src/features/d10/FormResult.module.less
@@ -13,9 +13,13 @@
   margin-top: 24px;
 
   & > * {
-    margin-right: 24px;
+    margin-right: 12px;
     &:last-child {
       margin-right: 0;
     }
+  }
+
+  a {
+    line-height: 32px;
   }
 }
