Micro clean up of raises form

--- a/src/features/d10/Guided4thEdRoll.module.less
+++ b/src/features/d10/Guided4thEdRoll.module.less
@@ -12,6 +12,10 @@
   max-width: @screen-lg;
   margin-top: 0;
 
+  .submit-divider {
+    margin-top: 0;
+  }
+
   .submit {
     margin-top: 24px;
     margin-bottom: 0;
