--- a/src/features/dnd/IdentifiedRoll.module.less
+++ b/src/features/dnd/IdentifiedRoll.module.less
@@ -5,3 +5,16 @@
   max-width: @screen-lg;
   margin: 0 auto;
 }
+
+.buttons {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 24px;
+
+  & > * {
+    margin-right: 12px;
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+}
