Remove unneeded, complex form option

--- a/src/features/roller/Intent.module.less
+++ b/src/features/roller/Intent.module.less
@@ -97,10 +97,13 @@
   }
 
   .custom-school {
-    .paper-background();
-    padding: 24px;
-    padding-bottom: 12;
-    margin-bottom: 24px;
+    margin-bottom: 12px;
+
+    :global(.ant-alert-description) {
+      p:last-child {
+        margin-bottom: 0;
+      }
+    }
   }
 
   .advanced-button {
