Explicit supported syntax

--- a/src/features/dnd/Roller.module.less
+++ b/src/features/dnd/Roller.module.less
@@ -19,3 +19,15 @@
     }
   }
 }
+
+.syntax {
+  ul {
+    display: flex;
+    justify-content: center;
+
+    li {
+      padding: 0;
+      margin-right: 12px;
+    }
+  }
+}
