--- a/src/features/d10/D10Roller.module.less
+++ b/src/features/d10/D10Roller.module.less
@@ -33,3 +33,16 @@
     align-items: center;
   }
 }
+
+.syntax {
+  display: flex;
+  flex-wrap: wrap;
+  ul {
+    display: flex;
+
+    li {
+      padding: 0;
+      margin-right: 4px;
+    }
+  }
+}
