Fix ul inside p warning

--- a/src/features/dnd/Roller.module.less
+++ b/src/features/dnd/Roller.module.less
@@ -21,6 +21,13 @@
 }
 
 .syntax {
+  margin-bottom: 1em;
+
+  p,
+  ul {
+    margin-bottom: 0;
+  }
+
   ul {
     display: flex;
     justify-content: center;
