--- a/src/features/cards/Draw.module.less
+++ b/src/features/cards/Draw.module.less
@@ -27,6 +27,36 @@
       float: right;
     }
   }
+
+  .deck-builder {
+    background-color: white;
+    border: 1px solid fade(black, 25%);
+    padding: 12px;
+
+    display: flex;
+    flex-direction: column;
+
+    :global(.ant-form-item-label) {
+      text-align: left;
+    }
+
+    :global(.ant-checkbox-group) {
+      display: flex;
+      flex-wrap: wrap;
+
+      img {
+        max-width: 30px;
+      }
+
+      & > label {
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+
+        margin: 0;
+      }
+    }
+  }
 }
 
 .cards {
