Add BbCode and co

--- a/src/features/cards/Draw.module.less
+++ b/src/features/cards/Draw.module.less
@@ -49,3 +49,16 @@
     margin: 4px;
   }
 }
+
+.copy-buttons {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 24px;
+
+  & > * {
+    margin-right: 12px;
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+}
