Show description of deck
As well as various undocumented QoL features

--- a/src/features/cards/Draw.module.less
+++ b/src/features/cards/Draw.module.less
@@ -42,5 +42,12 @@
 }
 
 .preconf {
+  .torii-box-light();
   margin-bottom: 24px;
+
+  .description {
+    padding: 16px;
+    background: #f0f0f0;
+    border-radius: 4px;
+  }
 }
