Add quick switch between cyberpunk rolls

--- a/src/features/cyberpunk/Roller.module.less
+++ b/src/features/cyberpunk/Roller.module.less
@@ -50,3 +50,11 @@
     line-height: 32px;
   }
 }
+
+.dice-type-selector {
+  .torii-box();
+  margin: 0 auto 24px;
+  max-width: @screen-md;
+  display: flex;
+  justify-content: center;
+}
