Add explanation for that mysterious "1d10"

--- a/src/features/cyberpunk/Roller.module.less
+++ b/src/features/cyberpunk/Roller.module.less
@@ -58,3 +58,11 @@
   display: flex;
   justify-content: center;
 }
+
+.explanation {
+  background-color: white;
+  border: 1px solid fade(black, 25%);
+  margin: 12px 0;
+  padding: 12px;
+  text-align: center;
+}
