--- a/src/common.less
+++ b/src/common.less
@@ -42,3 +42,26 @@
   background-image: url(./background.jpg);
   background-size: cover;
 }
+
+.centered-torii-box {
+  .torii-box();
+  margin: 0 auto 24px;
+  max-width: @screen-md;
+}
+
+.paper-background-extended {
+  .paper-background();
+  flex: 1;
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+
+.submit-float-right {
+  :global(.ant-form-item):last-child {
+    margin-bottom: 0;
+
+    button[type="submit"] {
+      float: right;
+    }
+  }
+}
